Update image path

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://saifulmuhajir.github.io/sai/"
+baseurl = ""
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "SAIFUL MUHAJIR"
