--- a/config.toml
+++ b/config.toml
@@ -123,7 +123,7 @@ publishDir = "public"
   autoThumbnailImage = true
 
   # Your favicon path, default is "/favicon.png"
-  favicon = "/favicon.ico"
+  favicon = "images/favicon.ico"
 
   # Header configuration
   # The link at the right of the header is customizable
